Add generic page response
